Updates from Overleaf

--- a/paper-v1.tex
+++ b/paper-v1.tex
@@ -24,7 +24,7 @@
 \author{Bianca Trovò\inst{1,2}\orcidID{0000-0002-6776-2304} \and
 Nazzareno Massari\inst{2,3}\orcidID{0000-0002-6638-2174}}
 %
-\authorrunning{B. Trovò et al.}
+\authorrunning{B. Trovò et N. Massari}
 % First names are abbreviated in the running head.
 % If there are more than two authors, 'et al.' is used.
 %
@@ -64,7 +64,7 @@ AntsReview is a destributed peer-review system which synthetizes successfull ide
 \newline AntsReview represent a new platform to issue peer-reviews and validate scientific papers and a new system for anonymous and open contributions with an incentivization mechanism to reach an ideal state of equilibrium and create value.
 \newline The AntsReview Protocol is divided into stack of sub-protocols responsible for different functionality:
 
-\begin{enumerate}}
+\begin{enumerate}
   \item \textbf{Bounty} - manage access management and the basic system.
   \item \textbf{Token Economics} - manage system incentivization mechanism integrating ideas from DeFi and Quadratic Funding.
   \item \textbf{Privacy} - mantains the anonymity of the system via AZTEC Protocol.
