add smart contracts flow-chart

--- a/paper-v1.tex
+++ b/paper-v1.tex
@@ -5,6 +5,8 @@
 \documentclass[runningheads]{llncs}
 %
 \usepackage{graphicx}
+\graphicspath{ {./img/} }
+
 \input{solidity-highlighting.tex}	% copy the file from this repo
 % Used for displaying a sample figure. If possible, figure files should
 % be included in EPS format.
@@ -63,6 +65,8 @@ AntsReview is a destributed peer-review system which synthetizes successfull ide
 \newline The contribution of AntsReview is simply allowing the peer-review process, as a complex system, to emerge as a self-organised ecosystem of authors and peer-reviewers to enhance the complexity of a paper and its validation.
 \newline AntsReview represent a new platform to issue peer-reviews and validate scientific papers and a new system for anonymous and open contributions with an incentivization mechanism to reach an ideal state of equilibrium and create value.
 \newline The AntsReview Protocol is divided into stack of sub-protocols responsible for different functionality:
+
+\includegraphics[scale=0.28]{Ants-Review}
 
 \begin{enumerate}}
   \item \textbf{Bounty} - manage access management and the basic system.
