update smart contracts flow-chart

--- a/paper-v1.tex
+++ b/paper-v1.tex
@@ -66,16 +66,19 @@ AntsReview is a destributed peer-review system which synthetizes successfull ide
 \newline AntsReview represent a new platform to issue peer-reviews and validate scientific papers and a new system for anonymous and open contributions with an incentivization mechanism to reach an ideal state of equilibrium and create value.
 \newline The AntsReview Protocol is divided into stack of sub-protocols responsible for different functionality:
 
-\includegraphics[scale=0.28]{Ants-Review}
+\includegraphics[scale=0.28]{AntsReview}
 
 \begin{enumerate}}
   \item \textbf{Bounty} - manage access management and the basic system.
   \item \textbf{Token Economics} - manage system incentivization mechanism integrating ideas from DeFi and Quadratic Funding.
   \item \textbf{Privacy} - mantains the anonymity of the system via AZTEC Protocol.
-  \item \textbf{DAO} - manage the governance of the system via DemocracyDAO.
 \end{enumerate}
 
 \subsubsection{Bounty}
+
+
+
+
 
 
 \begin{lstlisting}[language=Solidity]
