added point about review process and how it would change with AntsReview (scenario 1/ scenario 2) -- WATCH OUT INCONGRUENCES

--- a/paper-v1.tex
+++ b/paper-v1.tex
@@ -106,9 +106,7 @@ open identities open reports open participation open interaction open platform (
 
 \subsection{Design}
 
-\subsubsection{AnstReview process: scenario 1  (journal-dependent)}\\
-
-
+\subsubsection{AnstReview process: scenario 1  (journal-dependent)}
 
 \begin{enumerate}
     \item The author submits a manuscript to the journal.
@@ -117,11 +115,13 @@ open identities open reports open participation open interaction open platform (
     \item (footnote?) the bounty prize could correspond to part of the article submission fees and article publication fees requested to the authors by the journal.
     \item Reviews fulfilling the smart-contract requirements are validated by the journal editors.
     \item When the reviews are accepted (\emph{bounty fulfillment}), reviewers awarded a token called \emph{ANT}.
-    \item Not all reviews will have the same quality and depth. However, each of them might bring up one or more relevant contribution for the sake of improving the manuscript. In order to redistribute the bounty in a fair manner across reviewers, reviews will be voted by the editors with Quadratic Voting. 
+    \item Not all reviews will have the same quality and depth. However, each of them might bring up one or more relevant contribution for the sake of improving the manuscript. In order to redistribute the bounty in a fair manner across reviewers, reviews will be voted by the editors with Quadratic Voting.********* POINT OF FAILURE? who votes? 
+    
 \end{enumerate}
-When authors of a paper submit their draft to an open access journal or pre-print, they can instantiate a call (bounty issuance) for the paper-review whose fulfillment rules are set in a smart-contract to which any contributor can participate either as a reviewer or as editor. Reviews fulfilling the smart-contract requirements are audited by external editors who validate the content. If the reviews are accepted (bounty fulfillment), reviewers awarded a token, an internal digital currency specific for this bounty, called ‘ANT’. The ideal scenario envisages multiple contributions both from the reviewers actors and the editors actors. To reinforce ethical behaviour and the system will implement on AntsReview a quadratic funding [20].
 
-Scenario 2 (community-driven): peer-review is decoupled from journal
+\subsubsection{AnstReview process: scenario 2  (community-driven): 
+
+peer-review is decoupled from journal
 or to the pre-print service or to an hypothetical AntsReview platform).
 \subsection{Implementation}
 AntsReview is a destributed peer-review system which synthetizes successfull ideas from previous systems including The Bounty Network[ref], ERC20[ref], AZTEC Protocol[ref], IPFS[ref], Proof of Existence[ref], ...
